--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,6 @@ body {
     height: 100vh;
 }
 
-.typing {
-    border-right: 2px solid white;
-    white-space: nowrap;
-    overflow: hidden;
-    width: 12ch;
-    animation: typing 1s steps(12), blink 0.5s step-end infinite;
-}
-
 @keyframes typing {
     from {
         width: 0;
@@ -51,11 +43,16 @@ body {
 }
 
 .splash {
+    border-right: 2px solid white;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 12ch;
+    animation: typing 1s steps(12), blink 0.5s step-end infinite;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    font-size: 2em;
+    font-size: 4em;
     color: white;
     z-index: 3; /* Ensure it's above other elements */
 }
@@ -74,7 +71,33 @@ body {
 .locations {
     display: none; /* Initially hidden */
     padding: 20px;
+    z-index: 4; /* Ensure it's above other elements */
+    opacity: 0;
+    transition: opacity 2s; /* Adjust the duration as needed */
 }
+
+.locations ul {
+    list-style-type: none; /* Removes the bullet points */
+    padding: 0; /* Removes default padding */
+    font-size: 30px;
+}
+
+.locations li {
+    margin-bottom: 10px; /* Adds some space between list items */
+}
+
+.locations a {
+    text-decoration: none; /* Removes the underline from links */
+    color: white; /* Sets the link color */
+    transition: color 0.3s; /* Smooth color transition for hover effect */
+}
+
+.locations a:hover {
+    color: #007BFF; /* Changes the link color on hover */
+}
+
+
+
 
 
 
